Removed standard views and added new for main view. Now users can login using firebase services

--- a/test/index.html
+++ b/test/index.html
@@ -21,8 +21,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <body>
     <script>
       WCT.loadSuites([
-        'my-view1.html?dom=shady',
-        'my-view1.html?dom=shadow'
+        'main-view.html?dom=shady',
+        'main-view.html?dom=shadow',
+        'fof-view.html?dom=shady',
+        'fof-view.html?dom=shadow'
       ]);
     </script>
   </body>
